--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "buefy": "^0.8.0",
     "core-js": "^3.6.5",
     "firebase": "^7.15.2",
+    "resemblejs": "^3.2.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
