--- a/package.json
+++ b/package.json
@@ -9,32 +9,33 @@
     "deploy": "vue-cli-service build && firebase deploy"
   },
   "dependencies": {
-    "buefy": "^0.8.0",
-    "core-js": "^3.6.5",
-    "firebase": "^7.15.4",
-    "resemblejs": "^3.2.4",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "@babel/eslint-parser": "^7.28.0",
+    "@vue/compat": "^3.5.17",
+    "buefy": "^1.0.1",
+    "bulma": "^0.9.4",
+    "core-js": "^3.44.0",
+    "firebase": "^11.10.0",
+    "resemblejs": "^5.0.0",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/compiler-sfc": "^3.5.17",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
-    "vue-cli-plugin-buefy": "~0.3.7",
-    "vue-cli-plugin-pug": "^1.0.7",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-vue": "^10.3.0",
+    "sass": "^1.89.2",
+    "sass-loader": "^16.0.5",
+    "vue-cli-plugin-buefy": "~0.3.8",
+    "vue-cli-plugin-pug": "^2.0.0"
   }
 }
